--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-calendar",
+  "name": "@softleader/rc-calendar",
   "version": "9.6.0",
   "description": "React Calendar",
   "keywords": [
